# mdLabs

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-12-mdlabs-implementation.md
docs/superpowers/specs/: 2026-04-12-mdlabs-design.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: mdlabs.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutDialog.tsx  Breadcrumb.tsx  CodeBlock.tsx  ConfirmDialog.tsx  FileTree.tsx  FindBar.tsx  GlobalSearch.tsx  ImageLightbox.tsx  LinkPreview.tsx  MarkdownViewer.tsx  MermaidBlock.tsx  ReadingControls.tsx  ReadingStatus.tsx  Sidebar.tsx  ThemeToggle.tsx  TocPanel.tsx  UpdateDialog.tsx
src/hooks/: useAppSettings.ts  useFolderWatcher.ts  useHotkeys.ts  useInFileSearch.ts  useTheme.ts  useUpdater.ts
src/lib/: errorLog.ts
