[package]
name = "mdlabs"
version = "1.4.0"
description = "A lightweight Markdown reader for macOS"
authors = ["mmnLabs"]
edition = "2021"

[lib]
name = "mdlabs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
notify = "6"
notify-debouncer-mini = "0.4"
